--- a/shipmenttracking/pom.xml
+++ b/shipmenttracking/pom.xml
@@ -9,9 +9,9 @@
 
 	<name>shipmenttracking</name>
 	<url>http://maven.apache.org</url>
-
-	<properties>
+    <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.8</java.version>
 	</properties>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
