--- a/shipmenttracking/pom.xml
+++ b/shipmenttracking/pom.xml
@@ -9,7 +9,7 @@
 
 	<name>shipmenttracking</name>
 	<url>http://maven.apache.org</url>
-    <properties>
+	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 	</properties>
@@ -30,6 +30,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-activemq</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
